v2.9.6   - Made channel selection work with toggles more intuitively.
	   Going to N.x with a 'r' hotkey and then pressing 'r' 
	   again will bring you back to "N", not "Color" as before.
	 - Made channel selection smarter to avoid reloads when
	   not needed.  Only switching full layers or multiparts
	   will cause reloads.
	 - Fixed Unshown Frames (UF:) in Hud Display to correctly
	   count unshown frames.  Previously it would count them
	   with an addition of one to it each time.
	 - Fixed a random crash that would happen when LUT was 
	   activated and the sequence was still being loaded.
	 - Fixed color picker not showing the right colors on
	   stereo images once cache was cleared.
	 - Fixed a memory leak of thumbnail pictures.

v2.9.5   - Improved OpenEXR loader by a factor of 2.
	 - Made OpenEXR saver default to PIZ wavelet compression,
	   instead of None.
	 - Made audio track selection not throw when invalid tracks
	   are used.  If an invalid track is used, the audio is
	   muted ( track is -1 ).
	 - Same thing with subtitle track.
	 - Bug fixed Media Info Window not updating on frame change.
	 - Made images saved with left. or right. prefix not change 
	   to %V. prefix automatically.

v2.9.4   - RMB->Pixel->Copy Pixel Value now respects lut and
	   gamma if active.
	 - Changing volume or audio track now effects both 
	   stereo images.
	 - Bug fixed avi saver to work with images whose
	   resolution is not a multiple of two.
	 - Bug fixed thumbnail creation when image is not
	   a multiple of two.
	 - Bug fixed gaps in cache that would appear in timeline
	   when playing in loop.
	 - Updated to latest ffmpeg version.
	 - Changed 'o' alpha overlay shortcut to 'v', to avoid clash
	   with 'o' in changing timeline out point.
	 - Made channel list work with submenus, for easier access
	   and less clutter.
	 - Added stereo interlaced to show images interlaced.  For
	   this to work it is necessary to be in zoom 1.0 or
	   presentation mode.